rust/codec-md/src/snapshots/decode_md_fragments@code-fragment.md.snap
---
source: rust/codec-md/src/decode.rs
assertion_line: 2414
expression: "decode_fragment(content, None)"
input_file: fixtures/fragments/md/code-fragment.md
---
[
  {
    "type": "Paragraph",
    "content": [
      "Some ",
      {
        "type": "CodeFragment",
        "code": "code"
      },
      " in a paragraph."
    ]
  }
]
