rust/codec-md/src/snapshots/decode_md_fragments@delete.md.snap
---
source: rust/codec-md/src/decode.rs
expression: "decode_fragment(content, None)"
input_file: fixtures/fragments/md/delete.md

---
[
  {
    "type": "Paragraph",
    "content": [
      "Some ",
      {
        "type": "Delete",
        "content": [
          "deleted"
        ]
      },
      " text."
    ]
  },
  {
    "type": "Paragraph",
    "content": [
      "Or ",
      {
        "type": "Delete",
        "content": [
          "like this"
        ]
      },
      "."
    ]
  }
]
