rust/codec-md/src/snapshots/decode_md_fragments@div.md.snap
---
source: rust/codec-md/src/decode.rs
assertion_line: 2414
expression: "decode_fragment(content, None)"
input_file: fixtures/fragments/md/div.md
---
[
  {
    "type": "Division",
    "classes": [],
    "code": "rounded border(& solid blue-200) bg-blue-100 p-2 text-center",
    "content": [
      {
        "type": "Paragraph",
        "content": [
          "A division styled using Tailwind."
        ]
      }
    ],
    "css": "",
    "programmingLanguage": "tailwind"
  },
  {
    "type": "Division",
    "classes": [],
    "code": "bg-$color-100 p-2",
    "content": [
      {
        "type": "Paragraph",
        "content": [
          "A division with this parameter ",
          {
            "type": "Parameter",
            "name": "color",
            "validator": {
              "type": "EnumValidator",
              "values": [
                "red",
                "blue",
                "green"
              ]
            }
          },
          " interpolated into its Tailwind style."
        ]
      }
    ],
    "css": "",
    "programmingLanguage": "tailwind"
  },
  {
    "type": "CodeChunk",
    "code": "# @autorun always\nimport random\nshade = random.choice(range(100, 1000, 100))",
    "programmingLanguage": "python"
  },
  {
    "type": "Division",
    "classes": [],
    "code": "f\"bg-{color}-{shade} p-2\"",
    "content": [
      {
        "type": "Paragraph",
        "content": [
          "A division using the above color with a shade randomly selected in the above Python code chunk."
        ]
      }
    ],
    "css": "",
    "programmingLanguage": "python"
  }
]
