rust/codec-md/src/snapshots/decode_md_fragments@emphasis.md.snap
---
source: rust/src/methods/decode/md.rs
expression: decode_fragment(&content)
input_file: fixtures/fragments/md/emphasis.md

---
[
  {
    "type": "Paragraph",
    "content": [
      "Some ",
      {
        "type": "Emphasis",
        "content": [
          "emphasized"
        ]
      },
      " text."
    ]
  },
  {
    "type": "Paragraph",
    "content": [
      "Alternative ",
      {
        "type": "Emphasis",
        "content": [
          "emphasized"
        ]
      },
      " syntax."
    ]
  }
]
