rust/codec-md/src/snapshots/decode_md_fragments@image.md.snap
---
source: rust/codec-md/src/decode.rs
assertion_line: 2414
expression: "decode_fragment(content, None)"
input_file: fixtures/fragments/md/image.md
---
[
  {
    "type": "Paragraph",
    "content": [
      "An image ",
      {
        "type": "ImageObject",
        "contentUrl": "image.png"
      },
      "."
    ]
  },
  {
    "type": "Paragraph",
    "content": [
      "An image with a title ",
      {
        "type": "ImageObject",
        "contentUrl": "image.png",
        "title": [
          "the title"
        ]
      },
      "."
    ]
  },
  {
    "type": "Paragraph",
    "content": [
      "An image with some content ",
      {
        "type": "ImageObject",
        "contentUrl": "image.png",
        "caption": "some content"
      },
      "."
    ]
  }
]
