rust/codec-md/src/snapshots/decode_md_fragments@nontextual-annotation.md.snap
---
source: rust/codec-md/src/decode.rs
expression: "decode_fragment(content, None)"
input_file: fixtures/fragments/md/nontextual-annotation.md

---
[
  {
    "type": "Paragraph",
    "content": [
      "Also known as ",
      {
        "type": "NontextualAnnotation",
        "content": [
          "underlined"
        ]
      },
      "."
    ]
  }
]
